--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>j'apprends a coder ;D</title>
   </head>
-  <body style="background-color: #7f8c8d">
-<h1 style="padding-top: 20%;padding-bottom: 20%; text-align: center">mon premier code de merde</h1>
+  <body style="background-color: #2c3e50">
+<h1 style="padding-top: 20%;padding-bottom: 20%; text-align: center; color: #FFFFFF">mon premier code de merde</h1>
   </body>
 </html>
