--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="utf-8">
     <title>j'apprends a coder ;D</title>
   </head>
-  <body style="background-color: #2c3e50">
-<h1 style="padding-top: 20%;padding-bottom: 20%; text-align: center; color: #FFFFFF">mon premier code de merde</h1>
+
+  <style type="text/css">
+
+
+  	h1 {
+
+  	position: absolute;
+  	top: 40%;
+  	width: 100%;
+  	font-size: 100;
+  	font-family: Helvetica;
+  	text-align: center;
+  	color: #FFFFFF;
+
+  	}
+  
+
+</style>
+  <body>
+<h1>mon premier code de merde</h1>
   </body>
 </html>
