--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+
     <meta charset="utf-8">
     <title>j'apprends a coder ;D</title>
   </head>
 
   <style type="text/css">
-
 
   	h1 {
 
@@ -19,10 +19,10 @@
   	color: #FFFFFF;
 
   	}
-  
-
+ 
 </style>
-  <body>
+  <body style="background-color: #34495e">
+
 <h1>mon premier code de merde</h1>
   </body>
 </html>
