--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
 
   <style type="text/css">
+  	
+  	body{background-color: #1abc9c;
+  		
+  	}
 
   	h1 {
 
@@ -21,8 +25,7 @@
   	}
  
 </style>
-  <body style="background-color: #34495e">
-
+  <body>
 <h1>mon premier code de merde</h1>
   </body>
 </html>
