--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </style>
   <body style="background-color: #34495e">
 
-<h1>mon premier code de merde</h1>
+<h1>mon premier code génial</h1>
   </body>
 </html>
